# embedai

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: embedai.h  layers.h  model.h  tensor.h
src/: layer_dense.c  layer_relu.c  model_loader.c  tensor.c
test/: main.c
tools/: convert.py
